postAPI is updated
